# tensor_compute

./: .gitignore  Cargo.toml  README.md  compile_shaders.sh  dev_log.md
examples/assignment/: main.rs
examples/simple/: main.rs
examples/simple_crashing/: main.rs
examples/simple_mm/: main.rs
src/: autograd.rs  gpu_box.rs  gpu_buffers.rs  lib.rs  shader.comp  shader.rs  shader.spv
src/autograd/: ops.rs
src/gpu_buffers/: mod.rs
src/gpu_internals/: gpu_factory.rs  mod.rs
src/gpu_internals/gpu_buffers/: mod.rs
src/gpu_internals/shader_runner/: mod.rs  shader_runner.rs
src/gpu_ops/mm/: mm.spv  mod.rs  tests.rs
src/gpu_ops/relu/: mod.rs  tests.rs
src/gpu_store/: mod.rs
src/ops/: mod.rs
src/ops/bmm/: mm.spv  mod.rs  tests.rs
src/ops/mm/: mm.comp  mod.rs
src/ops/relu/: mod.rs  relu.comp  relu.spv  tests.rs
src/shader_runner/: mod.rs  shader_runner.rs
src/tensors/: cpu_2d_tensor.rs  cpu_tensor.rs  gpu_2d_tensor.rs  gpu_tensor.rs  mod.rs  prelude.rs  traits.rs
src/tensors/gpu_tensor/: accessors_contructors.rs  external_api.rs  mod.rs  tensor.rs  tensor_view.rs  tensor_view_mut.rs  tests.rs  traits.rs  utils.rs
src/tensors/gpu_tensor/gpu_ops/: mod.rs
src/tensors/gpu_tensor/gpu_ops/assign/: assign.comp  assign.spv  mod.rs  tests.rs
src/tensors/gpu_tensor/gpu_ops/binary_ops/: add.comp  add.spv  add_scalar.comp  add_scalar.spv  div_scalar.comp  div_scalar.spv  dot_div.comp  dot_div.spv  dot_mul.comp  dot_mul.spv  mod.rs  mul_scalar.comp  mul_scalar.spv  sub.spv  (+6 more)
src/tensors/gpu_tensor/indexing/: index_to_dim_stride.rs  mod.rs
src/tensors/gpu_tensor/shape_changing/: broadcast_tests.rs  mod.rs  slicing_tests.rs
(+70 files in other folders)
