[package]
name = "gpu_compute"
version = "0.1.0"
authors = ["tiberiodarferreira"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
wgpu = {git = "https://github.com/gfx-rs/wgpu-rs.git"}
winit = "0.22.2"
zerocopy = "0.3.0"
bytemuck = "1.2.0"
env_logger = "0.7.1"
log = "0.4.8"
