[package]
name = "tensor_compute"
version = "0.1.0"
authors = ["tiberiodarferreira"]
description = "A Tensor computing library for Rust"
edition = "2018"
repository = "https://github.com/tiberiusferreira/gpu_compute"
readme = "README.md"
keywords = ["gpu", "tensor", "compute"]
license = "MIT/Apache-2.0"

[dependencies]
futures = "0.3.5"
wgpu = {git = "https://github.com/gfx-rs/wgpu-rs.git", rev = "3069da10043c46a2b184fb57ad3760a5799d3f9b"}
async-trait = "0.1.36"
rand = "0.7"
winit = "0.22.2"
zerocopy = "0.3.0"
bytemuck = "1.2.0"
env_logger = "0.7.1"
log = "0.4.8"
once_cell = "1.4.0"
blocking = "0.4.7"